--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
+body, html {
+    height: 100%;
+    font-family:Arial, Helvetica, sans-serif;
+}
+
+* {
+    box-sizing: border-box;
+}
+
 img {
     width: 50%;
     background-position: right;
