--- a/style.css
+++ b/style.css
@@ -2,7 +2,14 @@ html {
     font-family:Arial, Helvetica, sans-serif;
 }
 
+div {
+    text-align: center;
+    display: flex;
+    align-items: center;
+}
+
 img {
     max-width: 45%;
     height: auto;
+    float: left;
 }
