--- a/style.css
+++ b/style.css
@@ -1,5 +1,15 @@
-html {
+* {
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
+}
+
+body {
     font-family:Arial, Helvetica, sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
 }
 
 div {
@@ -24,4 +34,12 @@ img {
 button {
     background-color:#596D48 ;
     color:white
+}
+
+.paragraph {
+    background-color: #d0d4db;
+}
+
+.submit  {
+    background-color: #d0d4db;
 }
