--- a/style.css
+++ b/style.css
@@ -7,8 +7,6 @@
 body {
     font-family:Arial, Helvetica, sans-serif;
     display: flex;
-    justify-content: center;
-    align-items: center;
     height: 100vh;
 }
 
@@ -19,7 +17,6 @@ div {
 
 img {
     justify-content: start;
-    max-width: 75%;
     height: auto;
 }
 
@@ -31,12 +28,16 @@ img {
     display: block;
 }
 
+.email {
+    justify-content: center;
+}
+
 button {
     background-color:#596D48 ;
     color:white
 }
 
-.paragraph {
+.header {
     background-color: #d0d4db;
 }
 
