--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    font-family:Arial, Helvetica, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     display: flex;
     height: 100vh;
 }
@@ -39,9 +39,19 @@ button {
 
 .header {
     background-color: #d0d4db;
+    padding: 50px;
+    text-align: center;
 }
 
-.submit  {
-    padding-top: 100px;
+.form1 {
+    padding: 50px;
+}
+
+.footer {
     background-color: #d0d4db;
+    padding: 50px;
+}
+.submitBtn {
+    padding: 50px;
+    align-items: center;
 }
